--- a/task2/index.html
+++ b/task2/index.html
@@ -17,9 +17,8 @@
   <!-- About Section -->
   <section id="about">
     <h2>About Me</h2>
-    <img src="image.jpg" alt="My Photo" />
-    <p><p>Hello! I'm a beginner web developer skilled in HTML, CSS, and JavaScript. I also know C, Python, and Java. I enjoy building user-friendly websites and learning new technologies.</p>
-.</p>
+    <img src="image.jpg" alt="My Photo" style="width:200px; border-radius: 10px;" />
+    <p>Hello! I'm a beginner web developer skilled in HTML, CSS, and JavaScript. I also know C, Python, and Java. I enjoy building user-friendly websites and learning new technologies.</p>
   </section>
 
   <!-- Skills Section -->
@@ -35,32 +34,30 @@
   </section>
 
   <!-- Projects Section -->
-<section id="projects">
-  <h2>Projects</h2>
-  
-  <!-- Project 1: Pawsitive Vibes -->
-  <div class="project">
-    <h3>Pawsitive Vibes</h3>
-    <p>A pet adoption website built with HTML, CSS, and JavaScript to help connect loving pets with new families.</p>
-    <a href="https://praneetha-as29.github.io/pawsitive-vibes/ " target="_blank">View my website</a> |
-    <a href="https://github.com/Praneetha-as29/pawsitive-vibes" target="_blank">View on GitHub</a>
-    <br />
-    <img src="screenshots/screenshot1.png" alt="Pawsitive Vibes Screenshot 1" style="max-width:100%; margin-top: 10px; border-radius: 8px;" />
-    <img src="screenshots/screenshot2.png" alt="Pawsitive Vibes Screenshot 2" style="max-width:100%; margin-top: 10px; border-radius: 8px;" />
-    <img src="screenshots/screenshot3.png" alt="Pawsitive Vibes Screenshot 3" style="max-width:100%; margin-top: 10px; border-radius: 8px;" />
-  </div>
+  <section id="projects">
+    <h2>Projects</h2>
 
-  <!-- Project 2: Traffic Monitor App -->
-  <div class="project">
-    <h3>Traffic Monitor App</h3>
-    <p>A React Native app created using Expo to monitor and manage traffic patterns efficiently. Built using JavaScript and modern mobile UI design principles.</p>
-    <a href="https://snack.expo.dev/@git/github.com/Praneetha-as29/traffic-monitor-app?platform=web" target="_blank">Try it on Snack</a> |
-    <a href="https://github.com/Praneetha-as29/traffic-monitor-app" target="_blank">View on GitHub</a>
-    <img src="screenshots/screenshot4.png" alt="Pawsitive Vibes Screenshot 1" style="max-width:100%; margin-top: 10px; border-radius: 8px;" />
-    <img src="screenshots/screenshot5.png" alt="Pawsitive Vibes Screenshot 2" style="max-width:100%; margin-top: 10px; border-radius: 8px;" />
-  </div>
-</section>
+    <!-- Project 1: Pawsitive Vibes -->
+    <div class="project">
+      <h3>Pawsitive Vibes</h3>
+      <p>A pet adoption website built with HTML, CSS, and JavaScript to help connect loving pets with new families.</p>
+      <a href="https://praneetha-as29.github.io/pawsitive-vibes/" target="_blank">View my website</a> |
+      <a href="https://github.com/Praneetha-as29/pawsitive-vibes" target="_blank">View on GitHub</a><br/>
+      <img src="Screenshots/screenshot1.png" alt="Pawsitive Vibes Screenshot 1" style="max-width:100%; width:600px; margin-top: 10px; border-radius: 8px;" />
+      <img src="Screenshots/screenshot2.png" alt="Pawsitive Vibes Screenshot 2" style="max-width:100%; width:600px; margin-top: 10px; border-radius: 8px;" />
+      <img src="Screenshots/screenshot3.png" alt="Pawsitive Vibes Screenshot 3" style="max-width:100%; width:600px; margin-top: 10px; border-radius: 8px;" />
+    </div>
 
+    <!-- Project 2: Traffic Monitor App -->
+    <div class="project">
+      <h3>Traffic Monitor App</h3>
+      <p>A React Native app created using Expo to monitor and manage traffic patterns efficiently. Built using JavaScript and modern mobile UI design principles.</p>
+      <a href="https://snack.expo.dev/@git/github.com/Praneetha-as29/traffic-monitor-app?platform=web" target="_blank">Try it on Snack</a> |
+      <a href="https://github.com/Praneetha-as29/traffic-monitor-app" target="_blank">View on GitHub</a><br/>
+      <img src="Screenshots/screenshot4.png" alt="Traffic Monitor Screenshot 1" style="max-width:100%; width:600px; margin-top: 10px; border-radius: 8px;" />
+      <img src="Screenshots/screenshot5.png" alt="Traffic Monitor Screenshot 2" style="max-width:100%; width:600px; margin-top: 10px; border-radius: 8px;" />
+    </div>
+  </section>
 
   <!-- Resume Section -->
   <section id="Resume">
